add L attribute to certificate attr options

--- a/roles/security/tls_generate_csr/templates/certificate_dn.j2
+++ b/roles/security/tls_generate_csr/templates/certificate_dn.j2
@@ -12,6 +12,9 @@
 {% if attr.O is defined %}
 - O={{ attr.O }}
 {% endif %}
+{% if attr.L is defined %}
+- L={{ attr.L }}
+{% endif %}
 {% if attr.ST is defined %}
 - ST={{ attr.ST }}
 {% endif %}
